crates/parser/tests/snapshots/parser__color_variables_2.snap
---
created: "2019-08-18T08:48:51.254105Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "a",
                value: Color(
                    Color {
                        r: 66,
                        g: 36,
                        b: 190,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
