crates/parser/tests/snapshots/parser__color_variables_4.snap
---
created: "2019-08-21T04:52:52.738108Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "a1",
                value: Variable(
                    Variable {
                        identifier: "a0",
                        opacity: 1.0,
                    },
                ),
            },
        ),
    ],
}
