crates/parser/tests/snapshots/parser__color_variables_6.snap
---
created: "2019-08-19T02:58:52.423096Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "a",
                value: Color(
                    Color {
                        r: 0,
                        g: 127,
                        b: 255,
                        a: 0.5,
                    },
                ),
            },
        ),
    ],
}
