crates/parser/tests/snapshots/parser__color_variables_7.snap
---
created: "2019-08-19T03:12:07.663057Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "a",
                value: ColorSet(
                    ColorSet {
                        light: Color(
                            Color {
                                r: 255,
                                g: 0,
                                b: 255,
                                a: 1.0,
                            },
                        ),
                        dark: Color(
                            Color {
                                r: 0,
                                g: 255,
                                b: 0,
                                a: 1.0,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
}
