crates/parser/tests/snapshots/parser__color_variables_8.snap
---
created: "2019-08-21T04:59:05.157469Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "a",
                value: Variable(
                    Variable {
                        identifier: "b",
                        opacity: 0.5,
                    },
                ),
            },
        ),
    ],
}
