crates/parser/tests/snapshots/parser__comments_0.snap
---
created: "2019-08-21T04:52:52.733027Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "bar",
                value: Color(
                    Color {
                        r: 255,
                        g: 0,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
        Variable(
            Declaration {
                identifier: "foo",
                value: Color(
                    Color {
                        r: 0,
                        g: 0,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
