crates/parser/tests/snapshots/parser__comments_1.snap
---
created: "2019-08-21T04:58:29.141882Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "foo",
                value: Color(
                    Color {
                        r: 0,
                        g: 0,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
