crates/parser/tests/snapshots/parser__comments_5.snap
---
created: "2019-08-21T06:38:38.812529Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        RuleSet(
            RuleSet {
                identifier: "a",
                items: [
                    RuleSet(
                        RuleSet {
                            identifier: "b",
                            items: [],
                        },
                    ),
                ],
            },
        ),
    ],
}
