crates/parser/tests/snapshots/parser__declaration_only.snap
---
created: "2019-08-18T07:32:22.749562Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Declaration(
            Declaration {
                identifier: "a",
                value: Color(
                    Color {
                        r: 0,
                        g: 255,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
