crates/parser/tests/snapshots/parser__typos_in_color_sets_5.snap
---
created: "2019-08-18T08:29:34.680864Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 2:
    a: (light: #ff00ff 30%, dark: #00ff00]
                                         ^
expected ')', found ]

1: at line 2, in ColorSet:
    a: (light: #ff00ff 30%, dark: #00ff00]
       ^

2: at line 2, in Declaration:
    a: (light: #ff00ff 30%, dark: #00ff00]
    ^


